[tool.poetry]
name = "cospar"
version = "0.4.1"
description = "A toolkit for dynamic inference of cell fate by integrating state and lineage information."
authors = ["Shou-Wen Wang <wangshouwen@westlake.edu.cn>"]
readme = "README.rst"
repository = "https://github.com/ShouWenWang-Lab/cospar"
documentation = "https://cospar.readthedocs.io/"
keywords = ["cell fate", "differentiation", "dynamic inference", "lineage tracing", "transcriptomics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
packages = [{ include = "cospar", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9"
anndata = "^0.10"
ete3 = "^3.1.3"
fastcluster = "^1.2.6"
gseapy = "^1.1.3"
leidenalg = "^0.10.2"
matplotlib = "^3.8"
numpy = ">=1.26, <2"
pandas = "^2.1"
plotnine = "^0.12.4"
scanpy = "^1.10"
scikit-learn = "^1.3"
scikit-misc = ">=0.2, <0.3"
scipy = ">=1.11, <=1.13.1"
statsmodels = "^0.14.2"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
